# Floundr

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  oci_rs.db  spec.md
.github/workflows/: build.yml  conventional_commits.yml
compliance_testing/conformance/: 02_push_test.go  runtests.sh
config/: Dockerfile  db.sqlite3  nginx.conf
migrations/: 01_createtables.sql
src/: analytics.rs  auth.rs  blobs.rs  codes.rs  content_discovery.rs  database.rs  endpoints.rs  lib.rs  main.rs  manifests.rs  storage.rs  storage_driver.rs  users.rs  util.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
tui_client/: .gitignore  Cargo.toml
tui_client/src/: app.rs  events.rs  lib.rs  main.rs  requests.rs
tui_client/src/screens/: manifests.rs  mod.rs  repos.rs  users.rs
